# protocols

./: .example.env  .gitignore  .npmignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  TODO.md  discovery.md  getting-started.html  hashmap.json  index.html  mkdocs.yml  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.json  vf.json  vite.config.ts  vitest.config.ts
assets/: app.Bi7ouvIR.js  at-proto_guides_account-migration.md.BUSe0bEz.js  at-proto_guides_account-migration.md.BUSe0bEz.lean.js  at-proto_guides_data-repos.md.DsSys2Cz.js  at-proto_guides_data-repos.md.DsSys2Cz.lean.js  at-proto_guides_going-to-production.md.J8-vweni.js  at-proto_guides_going-to-production.md.J8-vweni.lean.js  at-proto_guides_identity.md.B5vnLgg3.js  at-proto_guides_identity.md.B5vnLgg3.lean.js  at-proto_guides_lexicon-style-guide.md.C-ZvmqY-.js  at-proto_guides_lexicon-style-guide.md.C-ZvmqY-.lean.js  at-proto_guides_lexicon.md.Bff2-V18.js  at-proto_guides_lexicon.md.Bff2-V18.lean.js  at-proto_guides_oauth.md.BnZnaNKw.js  at-proto_guides_oauth.md.BnZnaNKw.lean.js  at-proto_guides_overview.md.BWq1bbGU.js  at-proto_guides_overview.md.BWq1bbGU.lean.js  at-proto_guides_permission-sets.md.D_N64NgK.js  at-proto_guides_permission-sets.md.D_N64NgK.lean.js  at-proto_guides_self-hosting.md.BG8vcwOT.js  at-proto_guides_self-hosting.md.BG8vcwOT.lean.js  at-proto_other_attestations-spec.md.CLj7j9-j.js  at-proto_other_attestations-spec.md.CLj7j9-j.lean.js  at-proto_other_attestations.md.-iFscww3.js  at-proto_specs_account.md.DbduxT-2.js  (+145 more)
src/experimental/experimental/haskell-monadic/: API_IMPROVEMENTS.md  README.md  REFACTORING_SUMMARY.md  TYPES_AS_NODES.md  commons-monadic.cabal  general.tex  hie.yaml  visual-guide.html
src/experimental/experimental/haskell-monadic/app/: ElegantExample.hi  ElegantExample.hs  Main.hs  TerminologyExample.hs  TypesAsNodesExample.hs
src/experimental/experimental/haskell-monadic/dist-newstyle/cache/: improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/experimental/experimental/haskell-monadic/dist-newstyle/packagedb/ghc-9.4.8/: commons-monadic-0.1.0.0-inplace.conf  package.cache
src/experimental/experimental/haskell-monadic/src/Commons/: Allocation.hs  Commons.hs  Constraint.hi  Constraint.hs  Filter.hs  Graph.hi  Monad.hi  Monad.hs  Potential.hi  Potential.hs  PropertyConstraint.hs  Types.hi
(+997 files in other folders)
